# temp

./: README.RU.md  README.md  nfc_aarch64-i2c  nfc_aarch64_spi  nfc_reader  nfc_reader_aarch64  nfc_reader_i2c_aarch64
griphd/: Cargo.toml
griphd/src/: main.rs
griphd/src/vm/: consts.rs  core.rs  mod.rs
nfc_reader/: Cargo.toml  nfc_reader_aarch64
nfc_reader/src/: lib.rs  main.rs
nfc_reader/src/pn532reader/: commands.rs  constants.rs  device.rs  mod.rs  response.rs
payload_gen/: Cargo.toml
payload_gen/src/: main.rs
vm_escape_through_nfc/etc/systemd/system/: griphd.service  nfc_reader.service
