[package]
name = "nfc_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
pn532 = { version = "0.5", features = ["msb-spi"] }
spidev = "0.5"
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
nb = "1.0.0"
clap = { version = "4.5.41", features = ["derive"] }
gpiocdev = { version = "0.7.3" }
hex = "0.4.3"
